# bandit_conf_generator

./: .gitignore  README.rst  setup.cfg  test-requirements.txt  tox.ini
bandit_conf_generator/: main.py
