[metadata]
name = bandit_conf_generator
summary = Bandit configuration generator
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org
classifier = 
    Environment :: OpenStack
    License :: OSI Approved :: Apache Software License

[files]
packages =
    bandit_conf_generator

[entry_points]
console_scripts =
    bandit-conf-generator = bandit_conf_generator.main:main
